syntax = "proto3";

package mcp.orchestrator.v1;

import "common.proto";

message CreateMcpTemplateRequest {
  optional string namespace = 1;
  string name = 2;
  map<string, string> labels = 3;
  string image = 4;
  repeated string command = 5;
  repeated string args = 6;
  map<string, string> envs = 7;
  repeated string secret_envs = 8;
  string resource_limit_name = 9;
  optional string authorization_name = 12;
  repeated VolumeMount volume_mounts = 10;
  repeated SecretMount secret_mounts = 11;
}

message GetMcpTemplateRequest {
  optional string namespace = 1;
  string name = 2;
}

message ListMcpTemplatesRequest {
  optional string namespace = 1;
  LabelQuery label = 2;
  optional int32 first = 3;
  optional string after = 4;
}

message ListMcpTemplatesResponse {
  repeated McpTemplateResponse data = 1;
  optional string endCursor = 2;
  bool hasNextPage = 3;
}

message DeleteMcpTemplateRequest {
  optional string namespace = 1;
  string name = 2;
}

message DeleteMcpTemplateResponse {
  bool success = 1;
  string message = 2;
}

message McpTemplateResponse {
  string namespace = 1;
  string name = 2;
  map<string, string> labels = 3;
  string image = 4;
  repeated string command = 5;
  repeated string args = 6;
  map<string, string> envs = 7;
  repeated string secret_envs = 8;
  string resource_limit_name = 9;
  string authorization_name = 14;
  repeated VolumeMount volume_mounts = 10;
  repeated SecretMount secret_mounts = 11;
  string created_at = 12;
  optional string deleted_at = 13;
}
